--- a/site-loja/style.css
+++ b/site-loja/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: rgb(248, 245, 238);
 }
 
@@ -54,19 +54,34 @@ body{
   height: 1000px;
 }
 
-.texto-endereco{
+.texto-endereco {
   min-height: 45px !important;
 }
 
-.container_maps{
+.container_maps {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.botoes_nav{
+
+.botoes_nav {
   color: rgb(107, 107, 107) !important;
 }
 
-.botoes_nav:hover{
+.botoes_nav:hover {
   color: rgba(128, 128, 128, 0.411) !important;
+}
+
+.icone_sucesso {
+  color: green !important;
+}
+
+.toast {
+  background-color: white;
+}
+
+.toast-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
